--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
   <meta charset="utf-8">
   <title>LoginByPhone</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.2f3323bd08b4cf8f.js" type="module"></script><script src="polyfills.cf0ed14510ce27bc.js" type="module"></script><script src="main.86ec6aeda584741d.js" type="module"></script>
+<script src="runtime.2f3323bd08b4cf8f.js" type="module"></script><script src="polyfills.cf0ed14510ce27bc.js" type="module"></script><script src="main.ab4f3306f9c0f1da.js" type="module"></script>
 
 </body></html>
