--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <title>LoginByPhone</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
