--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>LoginByPhone</title>
   <base href="/">
 
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
